Start designing frontend app page

--- a/client/src/index/index.html
+++ b/client/src/index/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
 </head>
-<body>
+    <body class="text-stone-700 font-open-sans">
     <main id="app"></main>
 </body>
 </html>
