Refactor some of the initial React code

--- a/client/src/index/index.html
+++ b/client/src/index/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
 </head>
-    <body class="text-stone-700 font-open-sans bg-repeat">
-    <main id="app"></main>
+    <body class="text-stone-700 font-open-sans">
+        <main id="app"></main>
+    </body>
 </body>
 </html>
