--- a/client/src/index/index.html
+++ b/client/src/index/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
 </head>
-    <body class="text-stone-800 font-open-sans bg-primary-100 ">
-        <main id="app"></main>
+    <body class="text-stone-800 font-open-sans bg-primary-100">
+        <main id="app" class="max-w-[100vw]"></main>
     </body>
 </body>
 </html>
